fix: fix navbar buttons alignmenta and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,27 @@
     background: #212429;
 }
 
+.navbar-btn {
+    @apply btn btn-sm bg-[#41444f] border-none text-white inline-flex items-center justify-center text-[16px];
+    @apply h-auto py-2 px-4 gap-2.5;
+    @apply hover:bg-[#41444f]
+}
+
+.navbar-btn--outline {
+    @apply btn btn-sm btn-outline text-white inline-flex items-center justify-center text-[16px] font-medium;
+    @apply bg-[#1F2E48] text-[#6888D2] border-[#6888D2];
+    @apply hover:bg-[#6888D2] hover:text-white hover:border-[#6888D2];
+    @apply h-auto py-2 px-4 gap-2.5;
+}
+
+.navbar-btn__icon-farm {
+    @apply w-5 mb-0.5
+}
+
+.navbar-btn__icon {
+    @apply h-5 w-5
+}
+
 .t{
     color: white!important;
     font-weight: 700!important;
